# karnameh

./: .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  RELEASE-SYSTEM-SUMMARY.md  RELEASING.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
scripts/: merge-updater.mjs  patch-android-gradle.py  update-version.sh  validate-release.sh
src/: App.tsx  index.tsx
src-tauri/: .env  Cargo.toml  karnameh_dev.db  latest.json.template  tauri.conf.json
src-tauri/.sqlx/: query-09078688a9bfc1fad36b6898ef9711ca0ed78b0a39b684f50bf9a5a35f68cc34.json  query-187e64651329f9839b0fe4dd1760481ac2560a4cb7608bae14d0137054ade0ec.json  query-1981c3cc4b95787e5ac990344527de5d05af1d9e2fac2032b43be36ee42d9f94.json  query-2ed6e1c8dca2a77e55bafe46b188e06e670683e494f4709f2c6b4687dc282cf7.json  query-33a667d699ccfc689d55b2b3eb5c769aec740a67cfa0b78452bd807d52c791cc.json  query-34689e25ddee86905d97b280150ccc33c20bad8e9460c16d1c63c8153c48c6bb.json  query-35a6ab5634c2846da3a60deeceefa74658e0abc830c4cd00a2df2ebcd6575964.json  query-38e31344a650ad61952784a9560bf849d9580f2e5d2caf8378812739bb41cbb2.json  query-3b7a4588447bcd3d26919a2e9a815a4de6e591853f51bf427de94a3c506793b2.json  query-4440aef60fcf97647898c0e920e863011a27e7fbba87789ff3962b848829d15b.json  query-703aac0f793dff759700249e7b07e9d24f5f17280c760687fbd95213d7ed5536.json  query-7c677d24e92a73a64f8867b566a18602ce26aef7b36b5ab4c2700062f8f3a864.json  query-9a36edeba68408822aaf6b961ca648486fe99044f684891f24ceca48e3293236.json  query-9d1b4f051b62128c9a5b920ee179194ef1e4a87d83a34d2c81ed35154d43a4b3.json  query-b937019207e192bcadc05ae1a273c521fb95f9699b9f91843277722226281cac.json  query-bde3919522ff65a4625e651bdf1853e0fb905c6c2ddd1b4b2d96b4f7205349b8.json  query-bf0716d53e47ad20cd4b1afd1178021474ffa89b4d504e65328b457aa1a0b9a6.json  query-c9b62f7104c3e35e68722ba0e173c31df0f497ad48578cc21e626b681a531672.json  query-ceb6a4212addeec5a64eb7eb3f565d91e8700403fa1e3471dea8c03181340662.json  query-e3841decdc4b17ff98a19c20d406f5c95c24870d4628a3cfa14d2e34dd851f20.json  query-e57370daa8c283cac3f41c640a1be5806b06f5d539ec11e7f64c36bfe3f91fad.json  query-f24ebd670c7ef8bd24bc2fb605cdb858fd15bed62e7a29d57abbbbb063947ee9.json  query-fa99a4adab2f245e97bcbe4a456ce0dd7831c61311cd9e9b23d7652b6ed6aa99.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 20240101_initial.sql
src-tauri/src/: db.rs  error.rs  lib.rs  main.rs
src-tauri/src/commands/: checklist_cmds.rs  client_cmds.rs  mod.rs  project_cmds.rs  task_cmds.rs
src-tauri/src/models/: checklist.rs  client.rs  mod.rs  project.rs  tag.rs  task.rs
src-tauri/src/repositories/: checklist_repo.rs  client_repo.rs  mod.rs  project_repo.rs  task_repo.rs
src/lib/: locale.ts  media.ts  tauri.ts  (+1 more)
(+21 files in other folders)
