[package]
name = "karnameh"
version = "1.0.0"
description = "بومی مدیریت پروژه، کارها و چک‌لیست‌های روزانه"
authors = ["arsamadineh"]
license = "MIT"
repository = "https://github.com/arsamadineh/karnameh"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "karnameh_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.3", features = [] }
tauri-plugin-log = "2"
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio-rustls", "chrono", "uuid"] }
tokio = { version = "1.52.3", features = ["full"] }
chrono = { version = "0.4.45", features = ["serde"] }
uuid = { version = "1.20.0", features = ["serde", "v4"] }
thiserror = "2.0.18"
tauri-plugin-shell = "2.3.5"
tauri-plugin-dialog = "2.7.1"
tauri-plugin-fs = "2.5.1"
tauri-plugin-updater = "2.10.1"
tauri-plugin-process = "2.3.1"
